# faux-type-theory

./: .gitignore  LICENSE.md  README.md  flake.nix
algebraic-fauxtt/: dune-project
algebraic-fauxtt/lib/core/: context.ml  context.mli  equal.ml  equal.mli  norm.ml  norm.mli  print.ml  print.mli  toplevel.ml  toplevel.mli  typecheck.ml  typecheck.mli  unify.ml  unify.mli
algebraic-fauxtt/lib/parsing/: lexer.ml  parser.mly
algebraic-fauxtt/lib/util/: config.ml  config.mli
algebraic-fauxtt/test/hole.t/: funhole.ftt  hole.ftt  run.t  unscoped.ftt
algebraic-fauxtt/test/syntax.t/: run.t  syntax.ftt
holey-fauxtt/: README.md  dune-project
holey-fauxtt/examples/: church.ftt
holey-fauxtt/lib/core/: TT.ml  TT.mli  context.ml  context.mli  equal.ml  norm.ml  norm.mli  print.ml  typecheck.ml  unify.ml  unify.mli
holey-fauxtt/lib/parsing/: lexer.ml  parser.mly  syntax.ml  syntax.mli
holey-fauxtt/lib/util/: config.mli
holey-fauxtt/test/: dune
holey-fauxtt/test/hole.t/: funhole.ftt  hole.ftt  nonlinear.ftt  run.t  unscoped.ftt
holey-fauxtt/test/syntax.t/: run.t
lectures/: PL-for-proof-assistants.tex
monadic-fauxtt/: dune-project
monadic-fauxtt/examples/: funext.ftt
monadic-fauxtt/lib/core/: TT.ml  TT.mli  context.ml  context.mli  equal.ml  norm.ml  norm.mli  typecheck.ml
monadic-fauxtt/lib/parsing/: parser.mly
monadic-fauxtt/test/church.t/: church.ftt  run.t
slides/: PL-for-PA-lecture-1.tex  PL-for-PA-lecture-2.tex  PL-for-PA-lecture-3.tex  PL-for-PA-lecture-4.tex  writeOnce.ml
